# rosetta-stone-rs

./: Cargo.toml  Forc.toml  PROJECT_CLEANUP_SUMMARY.md  README.md  project_summary.md
contracts/cross-contract-call/: Forc.toml
contracts/cross-contract-call/src/: main.sw
contracts/src20-token/: Forc.toml
contracts/src20-token/src/: main.sw
contracts/token-vault/: Forc.toml
contracts/token-vault/src/: main.sw
predicates/multi-sig/: Forc.toml
scripts/multi-asset-transfer/: Forc.toml
tests/: advanced_patterns.rs  cross_contract_operations.rs  harness.rs  integration_tests.rs  multi_wallet_operations.rs  predicate_operations.rs  predicates_test.rs  script_operations.rs  simple_token_test.rs  token_operations.rs  vault_operations.rs
tests/common/: integration_tests.rs  mod.rs
tests/src20_tests/: harness.rs
