[package]
name = "rosetta-stone-rs"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Nazeeh Vahora <nazeeh.xyz@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
tokio = { version = "1.12", features = ["rt", "macros"] }

[dependencies]
fuels = "0.70.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }



[[test]]
harness = true
name = "integration_tests"
path = "tests/integration_tests.rs"
